fix(contributionfooter): fix broken style

--- a/src/components/atoms/ContributionFooter.module.css
+++ b/src/components/atoms/ContributionFooter.module.css
@@ -3,7 +3,6 @@
   width: 100%;
   margin-top: auto;
   padding: 0 0 5px 0;
-  bottom: 0;
   position: absolute;
   left: 0;
   display: flex;
